minio-single/minio-single-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
        selector: minio
    spec:
      containers:
        - name: minio
          image: registry.andreybondarenko.com/minio-single
          ports:
            - containerPort: 9000
            - containerPort: 9090
          volumeMounts:
            - name: minio-data
              mountPath: /data/
          resources:
            requests:
              cpu: "10m"
              memory: "1300Mi"
            limits:
              cpu: "4000m"
              memory: "4000Mi"
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-lh
      imagePullSecrets:
        - name: my-private-registry
