minio-single/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
  labels:
    name: minio
spec:
  ports:
    - port: 9000
      name: s3
      protocol: TCP
    - port: 9090
      name: web
      protocol: TCP
  selector:
    app: minio
